# note_projet

./: CMakeLists.txt  Note.cpp  Note.h  README.md  main.cpp
gtest/: gtest-message.h  gtest-printers.h
gtest/internal/: gtest-port.h
src/: App.cpp  App.h  Note.cpp  Note.h  NoteCollection.cpp  NoteCollection.h  NoteCollectionObserver.cpp  NoteCollectionObserver.h  NoteModificationException.h  Observer.h  Subject.h  utils.h
test/: AppTest.cpp  AppTest.h  CMakeLists.txt  NoteCollectionTest.cpp  NoteCollectionTest.h  NoteTest.cpp  NoteTest.h
